# libshot

./: README.md  __init__.py  pyproject.toml  test_capture.py  test_log_underx11.md  tray.py_054_backup
libshot/: __init__.py  backends.py  exceptions.py
libshot.egg-info/: SOURCES.txt  requires.txt  top_level.txt
